<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">

        <item
            android:id="@+id/action_local_source"
            android:checkable="true"
            android:checked="true"
            android:title="@string/local_source" />

        <item
            android:id="@+id/action_remote_source"
            android:checkable="true"
            android:checked="true"
            android:title="@string/remote_source" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_sort_default"
            android:title="@string/sort_default"
            android:checked="true"/>

        <item
            android:id="@+id/action_sort_by_name"
            android:title="@string/sort_by_song" />

        <item
            android:id="@+id/action_sort_by_artist"
            android:title="@string/sort_by_artist" />

        <item
            android:id="@+id/action_sort_by_date"
            android:title="@string/sort_by_year" />

    </group>

</menu>